# certiflexicate_0

./: Cargo.toml  README.md
crates/flexicate-core/: Cargo.toml  LICENSE.AGPL-3.0-only
crates/flexicate-core/src/: flexicate.rs  lib.rs
crates/flexicate-core/src/flexicate/: certificate.rs  error.rs  helpers.rs
crates/flexicate-core/src/flexicate/certificate/: api.rs  certificate_internal.rs  public_key.rs  secret_key.rs  signature_fields.rs  signatures.rs  testing.rs  version.rs
crates/flexicate-core/src/flexicate/certificate/certificate_internal/: certificate_content.rs  certificate_create.rs  certificate_data_and_signatures.rs  certificate_data_content.rs  certificate_deserialize.rs  certificate_info.rs  certificate_key_attach.rs  certificate_serial.rs  certificate_signature_create.rs  certificate_signature_verify.rs  certificate_validate.rs  certiflexicate_builder.rs
crates/flexicate-core/src/flexicate/certificate/public_key/: public_key_create.rs  public_key_data.rs  public_key_deserialize.rs  public_key_info.rs  public_key_secret.rs  public_key_serial.rs  public_key_validate.rs  public_key_verify.rs
crates/flexicate-core/src/flexicate/certificate/secret_key/: secret_key_operations.rs
crates/flexicate-core/src/flexicate/certificate/signature_fields/: field_types.rs
crates/flexicate-core/src/flexicate/certificate/signatures/: signatures_accept_states.rs  signatures_accepted.rs  signatures_api.rs  signatures_creator.rs  signatures_serial.rs  (+8 more)
crates/flexicate-core/src/flexicate/helpers/: base64.rs  datetime.rs  get_default_values.rs  random.rs  regex.rs
(+20 files in other folders)
