

# Copyright (C) 2024 untatan

# This program is free software: you can redistribute it and/or modify it
# under the terms of the GNU Affero General Public License as published by
# the Free Software Foundation, version 3.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
# See the GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program. If not, see <https://www.gnu.org/licenses/>.

[package]
name = "flexicate-core"
description = "Tries to provide core data types for certiflexicates."
authors = ["untatan"]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/untatan/certiflexicate_0"
license-file = "LICENSE.AGPL-3.0-only"


[dependencies.base64]
version = "0.22.1"

[dependencies.chrono]
version = "0.4.38"

[dependencies.curve25519-dalek]
version = "4.1.3"

[dependencies.ed25519-dalek]
version = "2.1.1"
features = ["digest", "rand_core", "serde"]

[dependencies.rand]
version = "0.8.5"

[dependencies.regex]
version = "1.10.6"

[dependencies.serde]
version = "1.0.210"
features = ["derive"]


[dev-dependencies.serde_json]
version = "1.0.128"

[dev-dependencies.serde-pickle]
version = "1.1.1"

[dev-dependencies.toml]
version = "0.8.19"

[dev-dependencies.serde_yml]
version = "0.0.12"

